[tool.poetry]
name = "pyunits"
version = "0.1.0"
description = ""
authors = ["Gunung P. Wibisono <55311527+gunungpw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
